Version 0.99.0
--------------
o First release version
o Add function keggOne for sxtMTmatch.



