@@ -6,6 +6,7 @@ export(errorDisplay)
 export(installBioc)
 export(keepOne)
 export(ms2Plot)
+export(removeIsotope)
 export(sxtCorTest)
 export(sxtLength)
 export(sxtMTmatch)
